AAE-22075 perform single queries on join table after select on task table